# sakamoto-snort

./: .clang-format  .gitignore  AGENTS.md  Android.bp  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  iode-snort.rc  sucre-snort.rc
.codex/skills/cpp-pro/: .skillfish.json
archive/dev/: README.md  dev-build-soong.sh  dev-device-smoke.sh  dev-host-unit-tests.sh  dev-smoke.sh
archive/notes/: DEBUG_TEST_WORKFLOW_NOTES.md
archive/soong/: Android.bp  README.md  sucre-snort.rc
cmake/: SucreSnortDaemonSources.cmake  SucreSnortNdkDaemon.cmake
dev/: README.md  dev-android-device-lib.sh  dev-build-dx-netd-inject.sh  dev-build-iptest-neper.sh  dev-build-iptest-raw-proto.sh  dev-build-iptest-replay.sh  dev-build-ndk.sh  dev-build-telemetry-consumer.sh  dev-build.sh  dev-deploy.sh  dev-diagnose.sh  dev-integration-tests.sh  dev-lldbclient-wrapper.py  dev-native-debug.sh  dev-ndk-env.sh  dev-netd-resolv.sh  dev-setup-ndk.sh  dev-smoke-lib.sh  dev-smoke.sh  dev-tombstone.sh  dev-vscode-debug-task.py
docs/: DEBUG_DNS_SOCKET_MISMATCH.md  DOMAIN_POLICY_OBSERVABILITY.md  IMPLEMENTATION_ROADMAP.md  INTERFACE_SPECIFICATION.md  IPRULES_DEVICE_VERIFICATION.md  IP_RULE_ENGINE_RESEARCH.md  IP_RULE_POLICY_WORKING_DECISIONS.md  NATIVE_DEBUGGING_AND_TESTING.md  OBSERVABILITY_WORKING_DECISIONS.md  P0P1_BACKEND_WORKING_DECISIONS.md  README.md  SNORT_MULTI_USER_REFACTOR.md  SNORT_SUCRE_IODE_DIFF.md  TEST_COMPONENTS_MANIFESTO.md  VSCODE_CMAKE_WORKFLOW.md
docs/archived/: INTERFACE_SPECIFICATION_v3.7_2026-04-26_legacy.md  IP_RULE_ENGINE_RESEARCH.md  IP_RULE_POLICY_DISCUSSION_RAW_EXCERPTS_019cad3d-d9ba-7b21-9dc8-ae0f84c12ba1.md  IP_RULE_POLICY_WORKING_DECISIONS.md  OBSERVABILITY_DISCUSSION_RAW_EXCERPTS_019cad3d-d9ba-7b21-9dc8-ae0f84c12ba1.md  P0P1_BACKEND_WORKING_DECISIONS.md  SNORT_MULTI_USER_REFACTOR.md
docs/archived/DOMAIN_IP_FUSION/: CONTROL_COMMANDS_VNEXT.md  CONTROL_PROTOCOL_VNEXT.md  DOMAIN_IP_FUSION_CHECKLIST.md  DOMAIN_IP_FUSION_NITPICKS_TMP.md  IPRULES_APPLY_CONTRACT.md  OBSERVABILITY_IMPLEMENTATION_TASKS.md  OBSERVABILITY_WORKING_DECISIONS.md
docs/decisions/: DOMAIN_IP_FUSION_CHECKLIST.md  DOMAIN_POLICY_OBSERVABILITY.md  FLOW_TELEMETRY_WORKING_DECISIONS.md  IPRULES_DUAL_STACK_WORKING_DECISIONS.md  IP_RULE_POLICY_WORKING_DECISIONS.md  L4_CONNTRACK_WORKING_DECISIONS.md  OBSERVABILITY_WORKING_DECISIONS.md  P0P1_BACKEND_WORKING_DECISIONS.md  RESETALL_RUNTIME_CONCURRENCY.md
docs/decisions/DOMAIN_IP_FUSION/: CONTROL_COMMANDS_VNEXT.md  CONTROL_PROTOCOL_VNEXT.md  CONTROL_VNEXT_SURFACE_SIMPLIFIED_TMP.md  DOMAIN_IP_FUSION_AUDIT_TMP.md  DOMAIN_IP_FUSION_CHECKLIST.md  DOMAIN_IP_FUSION_DESIGN_REVIEW_TMP.md  DOMAIN_IP_FUSION_NITPICKS_TMP.md  IPRULES_APPLY_CONTRACT.md  OBSERVABILITY_IMPLEMENTATION_TASKS.md  OBSERVABILITY_WORKING_DECISIONS.md
docs/reference/: SNORT_SUCRE_IODE_DIFF.md
docs/reviews/: 2026-04-22-add-control-vnext-metrics.verify.md  CURRENT_HEAD_CPP_CONCURRENCY_REVIEW.md  CURRENT_HEAD_CPP_CONCURRENCY_REVIEW_PROMPT.md
docs/testing/: DEVICE_SMOKE_CASEBOOK.md  DEVICE_SMOKE_SNORT_BUGS.md  DEVICE_TEST_COVERAGE_MATRIX.md  DEVICE_TEST_REORGANIZATION_CHARTER.md  HOST_TEST_SURVEY.md  IPRULES_DEVICE_VERIFICATION.md  PERFORMANCE_TEST_RECORD.md  README.md
docs/testing/archive/: TEST_COMPONENTS_MANIFESTO.md
docs/testing/ip/: BUG_kernel_panic_sock_ioctl.md  CONNTRACK_CT_TIER1_VERIFICATION.md  IP_TEST_MODULE.md
docs/tooling/: NDK_DAEMON_BUILD.md  VSCODE_CMAKE_WORKFLOW.md
openspec/: project.md
openspec/changes/add-app-ip-blacklist/: design.md  proposal.md  tasks.md
openspec/changes/add-app-ip-l3l4-rules-engine/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/add-combinable-blockmask-chains/: design.md  proposal.md  tasks.md
openspec/changes/add-control-vnext-daemon-base/: design.md  tasks.md
openspec/changes/add-control-vnext-metrics/: tasks.md
openspec/specs/app-ip-l3l4-rules/: spec.md
src/: Activity.cpp  Activity.hpp  ActivityManager.cpp  ActivityManager.hpp  Address.cpp  Address.hpp  AndroidInitSocket.cpp  AndroidInitSocket.hpp  App.cpp  App.hpp  AppManager.cpp  AppManager.hpp  AppStats.cpp  AppStats.hpp  BlockingList.cpp  BlockingList.hpp  BlockingListManager.cpp  BlockingListManager.hpp  CmdLine.cpp  CmdLine.hpp  Conntrack.cpp  Conntrack.hpp  Control.cpp  Control.hpp  ControlVNext.cpp  ControlVNext.hpp  ControlVNextCodec.cpp  ControlVNextCodec.hpp  ControlVNextSession.cpp  ControlVNextSession.hpp  ControlVNextSessionCommands.hpp  ControlVNextSessionCommandsCheckpoint.cpp  ControlVNextSessionCommandsDaemon.cpp  ControlVNextSessionCommandsDomain.cpp  ControlVNextSessionCommandsIpRules.cpp  ControlVNextSessionCommandsMetrics.cpp  ControlVNextSessionCommandsTelemetry.cpp  ControlVNextSessionSelectors.hpp  ControlVNextStreamExplain.hpp  ControlVNextStreamJson.cpp  (+79 more)
tests/host/: CMakeLists.txt  P0_PURE_LOGIC_INVENTORY.md  README.md  conntrack_tests.cpp  control_vnext_checkpoint_surface_tests.cpp  control_vnext_codec_tests.cpp  control_vnext_ctl_roundtrip_tests.cpp  control_vnext_daemon_session_tests.cpp  control_vnext_daemon_stub_commands.cpp  control_vnext_domain_surface_tests.cpp  control_vnext_iprules_surface_tests.cpp  control_vnext_metrics_surface_tests.cpp  control_vnext_pkt_event_json_tests.cpp  control_vnext_stream_surface_tests.cpp  control_vnext_telemetry_surface_tests.cpp  domain_policy_sources_tests.cpp  flow_telemetry_records_tests.cpp  flow_telemetry_ring_tests.cpp  host_gap_tests.cpp  ip_rules_engine_tests.cpp  ipv6_l4_walker_tests.cpp  package_state_tests.cpp  perf_metrics_tests.cpp  reason_metrics_tests.cpp  reset_epoch_tests.cpp  rule_tests.cpp  settings_tests.cpp  stats_tests.cpp  sucre_snort_ctl.cpp  sucre_snort_ctl_session.cpp  sucre_snort_ctl_session.hpp
tests/host/include/: Saver.hpp
tests/host/include/android-base/: logging.h  properties.h
tests/integration/: CMakeLists.txt  README.md  device-smoke.sh  dx-smoke-control.sh  dx-smoke-datapath.sh  dx-smoke-platform.sh  dx-smoke.sh  full-smoke.sh  iprules-device-matrix.sh  iprules.sh  lib.sh  perf-network-load.sh  run.sh  vnext-baseline.sh  vnext-domain-casebook.py
(+350 files in other folders)
